cmd/internationalization/k8s/01-internationalization.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: internationalization
  namespace: kube-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: internationalization
  template:
    metadata:
      labels:
        app: internationalization
    spec:
      containers:
      - name: internationalization
        image: uhub.service.ucloud.cn/entropypool/internationalization:latest
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: internationalization
  namespace: kube-system
spec:
  ports:
  - name: http
    port: 50190
    targetPort: 50190
  - name: grpc
    port: 50191
    targetPort: 50191
  - name: prometheus
    port: 50192
    targetPort: 50192
  selector:
    app: internationalization
