cmd/internationalization/k8s/02-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: internationalization-npool-top-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: internationalization-npool
    k8s.kuboard.cn/workload: internationalization-npool
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-internationalization-prefix@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http:
        paths:
          - path: /api/internationalization
            backend:
              serviceName: internationalization
              servicePort: 50190

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: internationalization-xpool-top-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: internationalization-xpool
    k8s.kuboard.cn/workload: internationalization-xpool
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-internationalization-prefix@kubernetescrd

spec:
  rules:
    - host: api.xpool.top
      http:
        paths:
          - path: /api/internationalization
            backend:
              serviceName: internationalization
              servicePort: 50190

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-internationalization-prefix
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - /api/internationalization
